no longer will Dan's eyes bleed.

--- a/app/assets/stylesheets/zmain.css
+++ b/app/assets/stylesheets/zmain.css
@@ -1,13 +1,13 @@
 @import url(http://fonts.googleapis.com/css?family=Lily+Script+One);
 
 html {
-	background-color: #1abc9c;
+	background-color: #95A5A6;
 	height: 100%;
 }
 
 body {
 	padding-top: 20px;
-	background-color: #1abc9c;
+	background-color: #95A5A6;
 }
 
 .jumbotron {
